Bottom-Spacing Fix mit ::after pseudo-element

--- a/src/app/pages/imprint/imprint.scss
+++ b/src/app/pages/imprint/imprint.scss
@@ -37,6 +37,12 @@ app-nav {
   width: 100%;
   max-width: 1440px;
 
+    &::after {
+    content: '';
+    display: block;
+    height: 80px;
+  }
+
   // Header with title and back button
   &__header {
     display: flex;
